src/test/deca/context/invalid/our_tests/jb-void-field.deca
// Description:
//    Void field
//
// Resultats:
//    Should throw a contextual error (rule 2.5)
//
// Historique:
//    cree le 22/01/2017

class A {
    void x;
}
